--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   flutter_native_splash: ^2.4.7
-  
+  supabase_flutter: ^2.10.0
+  google_sign_in: ^7.2.0 
 dev_dependencies:
   flutter_test:
     sdk: flutter
